--- a/src/partials/sidebar.css
+++ b/src/partials/sidebar.css
@@ -3,6 +3,7 @@
     border-right: 1px solid var(--border-dark);
     display: flex;
     flex-direction: column;
+    flex-shrink: 0;
     width: 384px;
 }
 
